最初と最後に移動するボタンを追加

--- a/4koma.html
+++ b/4koma.html
@@ -37,7 +37,13 @@
 <body>
     <nav class="navbar navbar-primary bg-primary text-light">
         <h1 class="h3">ミリシタ4コマビューワ</h1>
-        <div id="navigation"><button type="button" id="prev_button" class="btn btn-primary">＜</button><span id="pages">**/**</span><button type="button" id="next_button" class="btn btn-primary">＞</button></div>
+        <div id="navigation">
+            <button type="button" id="first_button" class="btn btn-primary">&lt;&lt;</button>
+            <button type="button" id="prev_button" class="btn btn-primary">&lt;</button>
+            <span id="pages">**/**</span>
+            <button type="button" id="next_button" class="btn btn-primary">&gt;</button>
+            <button type="button" id="last_button" class="btn btn-primary">&gt;&gt;</button>
+        </div>
         <div >
             <select id="idols1">
                 <option value="">登場人物1</option>
