--- a/4koma.html
+++ b/4koma.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ミリシタ4コマビューワ</title>
+    <title>ミリシタ4コマビューア</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -35,8 +35,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-primary bg-primary text-light">
-        <h1 class="h3">ミリシタ4コマビューワ</h1>
+    <nav class="navbar navbar-primary bg-primary text-light p-0 sticky-top">
+        <h1 class="h3">ミリシタ4コマビューア</h1>
         <div id="navigation">
             <button type="button" id="first_button" class="btn btn-primary">&lt;&lt;</button>
             <button type="button" id="prev_button" class="btn btn-primary">&lt;</button>
