--- a/4koma.html
+++ b/4koma.html
@@ -45,6 +45,7 @@
             <button type="button" id="last_button" class="btn btn-primary">&gt;&gt;</button>
         </div>
         <div >
+            <input type="checkbox" id="leading_actor" value="" >主役回のみ
             <select id="idols1">
                 <option value="">登場人物1</option>
             </select>
