--- a/4koma.html
+++ b/4koma.html
@@ -31,12 +31,57 @@
         #idols1, #idols2 , #drawers, option{
             max-width: 80px;
         }
+
+#loading {
+	display: inline-block;
+	margin-left: 10px;
+
+}
+.dot1 {
+	background: #FF2284;
+	animation-delay: -0.15s;
+}
+.dot2 {
+	background: #005EFF;
+	animation-delay: 0s;
+}
+.dot3 {
+	background: #FFBB00;
+	animation-delay: 0.15s;
+}
+.dot {
+	top: 0;
+	bottom: 0;
+	margin: auto 2px;
+	border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-fill-mode: both;
+  animation-play-state: running;
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0.0;
+	transform: scale(0.0);
+  }
+  100% {
+	opacity: 1;
+	transform: scale(1);
+  }
+}
     </style>
 </head>
 
 <body>
     <nav class="navbar navbar-primary bg-primary text-light p-0 sticky-top">
-        <h1 class="h3">ミリシタ4コマビューア</h1>
+        <h1 class="h3">ミリシタ4コマビューア<div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
         <div id="navigation">
             <button type="button" id="first_button" class="btn btn-primary">&lt;&lt;</button>
             <button type="button" id="prev_button" class="btn btn-primary">&lt;</button>
