--- a/4koma.html
+++ b/4koma.html
@@ -101,11 +101,13 @@ ul.dropdown_nav li {
  
     display: none;
     overflow: hidden;
+	box-shadow: 10px 10px 10px rgba(0,0,0,.7);
 
 }
  
 .dropdown_container:hover > .popup{
     display: inline-block;
+	
 }
     </style>
 </head>
