--- a/4koma.html
+++ b/4koma.html
@@ -100,8 +100,11 @@ ul.dropdown_nav li {
 	border: thin solid #aaa;
  
     display: none;
-    overflow: hidden;
+    overflow-x: hidden;
+	overflow-y: scroll
+
 	box-shadow: 10px 10px 10px rgba(0,0,0,.7);
+	
 
 }
  
