--- a/4koma.html
+++ b/4koma.html
@@ -118,7 +118,7 @@ ul.dropdown_nav li {
 <body>
 
 	
-    <nav class="navbar navbar-primary bg-primary text-light p-0 sticky-top yamm">
+    <nav class="navbar navbar-primary bg-primary text-light p-0" id="main_navbar">
         <h1 class="h3">ミリシタ4コマビューア<div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
         <div id="navigation">
             <button type="button" id="first_button" class="btn btn-primary">&lt;&lt;</button>
