--- a/4koma.html
+++ b/4koma.html
@@ -86,15 +86,12 @@ ul.dropdown_nav li {
 .dropdown_container{
     display: inline-block;
     position: relative;
-
-
 }
- 
-.dropdown_container > .popup{
-    position: absolute;
-    top: 100%;
-    right: 0;
 
+.popup{
+    position: absolute;
+	top: 100%;
+    right: 0;
 
     background-color: #fff;
 	border: thin solid #aaa;
@@ -108,7 +105,7 @@ ul.dropdown_nav li {
 
 }
  
-.dropdown_container:hover > .popup{
+.dropdown_container:hover  .popup{
     display: inline-block;
 	
 }
@@ -145,7 +142,7 @@ ul.dropdown_nav li {
 				<li class="dropdown_container"><input type="checkbox" id="leading_actor" value="" >主役回のみ</li>
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol1_name">アイドル1▼</span></button>
-					<div id="idol1_menu" class="popup"></div>
+					<div class="sub_container"><div id="idol1_menu" class="popup"></div></div>
 				</li>
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol2_name">アイドル2▼</span></button>
