--- a/4koma.html
+++ b/4koma.html
@@ -88,6 +88,10 @@ ul.dropdown_nav li {
     position: relative;
 }
 
+.limited_width {
+	max-width: 200px;
+}
+
 .popup{
     position: absolute;
 	top: 100%;
@@ -102,6 +106,7 @@ ul.dropdown_nav li {
 
 	box-shadow: 10px 10px 10px rgba(0,0,0,.7);
 	max-height: 500px;
+	max-width: 150px;
 
 }
  
