メニュー表示をjavascript制御にして左右位置を決定

--- a/4koma.html
+++ b/4koma.html
@@ -95,7 +95,7 @@ ul.dropdown_nav li {
 .popup{
     position: absolute;
 	top: 100%;
-    right: 0;
+
 
     background-color: #fff;
 	border: thin solid #aaa;
@@ -108,11 +108,19 @@ ul.dropdown_nav li {
 	max-width: 150px;
 
 }
- 
+
+.left0 {
+	left: 0px;
+}
+.right0 {
+	right:0px;
+}
+/*
 .dropdown_container:hover  .popup{
     display: inline-block;
 	
 }
+*/
     </style>
 </head>
 
