--- a/4koma.html
+++ b/4koma.html
@@ -104,8 +104,8 @@ ul.dropdown_nav li {
 
 
 	box-shadow: 10px 10px 10px rgba(0,0,0,.7);
-	max-height: 500px;
-	max-width: 150px;
+	/*max-height: 500px;
+	max-width: 150px;*/
 
 }
 
@@ -154,7 +154,7 @@ ul.dropdown_nav li {
 				<li class="dropdown_container"><input type="checkbox" id="leading_actor" value="" >主役回のみ</li>
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol1_name">アイドル1▼</span></button>
-					<div class="sub_container"><div id="idol1_menu" class="popup"></div></div>
+					<div id="idol1_menu" class="popup"></div>
 				</li>
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol2_name">アイドル2▼</span></button>
