メニューをdiv構成で上詰めに

--- a/4koma.html
+++ b/4koma.html
@@ -115,6 +115,10 @@ ul.dropdown_nav li {
 .right0 {
 	right:0px;
 }
+.idol_menu_item {
+	float: left;
+	margin: 2px;
+}
 /*
 .dropdown_container:hover  .popup{
     display: inline-block;
