--- a/4koma.html
+++ b/4koma.html
@@ -155,18 +155,20 @@ ul.dropdown_nav li {
             </select>
 			-->
 			<ul class="dropdown_nav">
-				<li class="dropdown_container"><input type="checkbox" id="leading_actor" value="" >主役回のみ</li>
+				
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol1_name">アイドル1▼</span></button>
 					<div id="idol1_menu" class="popup"></div>
+					
 				</li>
+				<li class="dropdown_container" style="font-size: small;"><div class="form-check"><input class="form-check-input" type="checkbox" id="main_only" value="" >主役回　　</div></li>
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol2_name">アイドル2▼</span></button>
 					<div id="idol2_menu" class="popup"></div>
 				</li>
 				<li class="dropdown_container">
-					<select id="drawers">
-						<option value="">作画</option>
+					<select id="drawers" class="form-select">
+						<option value="" selected>作画</option>
 					</select>
 				</li>
 			</ul>
