メニューアイコン表示改善

--- a/triangle.html
+++ b/triangle.html
@@ -25,7 +25,7 @@ const yonkoma = `紬	ジュリア	あずさ
 春香	未来	桃子	千早				
 可憐	麗花	美也	昴				
 昴	やよい	恵美					
-育	瑞希						
+瑞希	育						
 真美	エレナ	紗代子	律子	美咲			
 貴音							
 海美	環	律子					
@@ -51,7 +51,7 @@ const yonkoma = `紬	ジュリア	あずさ
 美希	風花						
 ロコ	貴音						
 亜美	恵美	琴葉	真美				
-美奈子	奈緒						
+奈緒	美奈子						
 未来	奈緒	海美	美奈子	可奈			
 静香	紗代子	環					
 翼	春香						
@@ -91,7 +91,7 @@ const yonkoma = `紬	ジュリア	あずさ
 あずさ	静香	千早					
 志保	環	風花					
 可奈	歌織	紗代子					
-静香	ジュリア	未来	翼				
+ジュリア	静香	未来	翼				
 のり子	環	奈緒					
 美希	莉緒	百合子					
 未来	茜	麗花					
@@ -111,7 +111,7 @@ const yonkoma = `紬	ジュリア	あずさ
 エミリー	ロコ	可奈	貴音				
 志保	杏奈	環					
 響	風花	志保	翼				
-千早	美希	エレナ					
+美希	千早	エレナ					
 貴音	エミリー	育					
 	百合子	貴音					
 歌織	風花	育					
@@ -133,7 +133,7 @@ const yonkoma = `紬	ジュリア	あずさ
 春香	美希	奈緒					
 ひなた	莉緒						
 あずさ	伊織	亜美					
-桃子	亜利沙						
+亜利沙	桃子						
 紬	ジュリア						
 エレナ	瑞希	莉緒					
 恵美	海美	環					
@@ -164,7 +164,7 @@ const yonkoma = `紬	ジュリア	あずさ
 桃子	恵美	奈緒					
 育	美奈子	可奈					
 環	桃子						
-茜	貴音	未来	星梨花				
+貴音	茜	未来	星梨花				
 朋花	可奈	杏奈	未来				
 ジュリア	可奈	環	育	恵美	琴葉		
 紗代子	百合子						
