--- a/4koma.html
+++ b/4koma.html
@@ -161,7 +161,8 @@ ul.dropdown_nav li {
 					<div id="idol1_menu" class="popup"></div>
 					
 				</li>
-				<li class="dropdown_container" style="font-size: small;"><div class="form-check"><input class="form-check-input" type="checkbox" id="main_only" value="" >主役回　　</div></li>
+				<li class="dropdown_container" style="font-size: small;">
+					<div class="form-check"><input class="form-check-input" type="checkbox" id="main_only" value="" >主役回　　</div></li>
 				<li class="dropdown_container">
 					<button type="button" class="btn btn-primary"><span id="idol2_name">アイドル2▼</span></button>
 					<div id="idol2_menu" class="popup"></div>
