スマホ向け枠の付け方変更

--- a/4koma.html
+++ b/4koma.html
@@ -103,7 +103,7 @@ ul.dropdown_nav li {
     display: none;
 
 
-	box-shadow: 10px 10px 10px rgba(0,0,0,.7);
+	box-shadow: 10px 10px 15px 0px rgba(0,0,0,.7);
 	/*max-height: 500px;
 	max-width: 150px;*/
 
@@ -119,6 +119,7 @@ ul.dropdown_nav li {
 	float: left;
 	margin: 2px;
 }
+
 /*
 .dropdown_container:hover  .popup{
     display: inline-block;
