--- a/triangle.html
+++ b/triangle.html
@@ -373,7 +373,10 @@ const yonkoma = `紬	ジュリア	あずさ
 可憐	環						
 未来	春香						
 真美	可憐						
-亜利沙	海美	奈緒	律子				`;
+亜利沙	海美	奈緒	律子				
+瑞希	未来						
+歌織	昴	このみ					
+貴音	玲音	詩花	黒井社長				`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
