好意グラフを更新

--- a/4koma.html
+++ b/4koma.html
@@ -170,7 +170,7 @@ ul.dropdown_nav li {
 					<button type="button" class="btn btn-primary"><span id="idol2_name">アイドル2▼</span></button>
 					<div id="idol2_menu" class="popup"></div>
 				</div>
-				<div class="dropdown_container">
+				<div class="dropdown_container" title="作画担当">
 					<select id="drawers" class="form-select">
 						
 					</select>
