--- a/triangle.html
+++ b/triangle.html
@@ -16,7 +16,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 </head>
 <body>
+	<h1>4コマに見る三角関係</h1>
 	<div id="network"></div>
+	<ul>
+		<li>ミリシタ4コマに登場するアイドルを集計し、好意の向きを可視化しました。</li>
+		<li>4コマには主役が設定されています。主役以外で登場するアイドル(脇役アイドル)は、主役アイドルのことが好きで一緒に行動していたので4コマに登場したと考えられます。</li>
+		<li>例えば、春香が桃子の主役回に3回、千早、可奈、可憐の主役回に2回登場していた場合、登場回数が最も多い桃子のことが好きだと判定し、太さが3の矢印を春香⇒桃子に引きました。登場回数が1回以下の場合は矢印を引きません。</li>
+	</ul>
 <script>
 const yonkoma = `紬	ジュリア	あずさ					
 歌織	星梨花	莉緒					
@@ -46,6 +52,7 @@ const yonkoma = `紬	ジュリア	あずさ
 やよい	千鶴	伊織					
 莉緒	翼						
 伊織	志保	美希	昴	環			
+まつり	歩	莉緒	美咲				
 茜	ジュリア	エミリー					
 琴葉	恵美	美也	海美	環			
 美希	風花						
@@ -67,6 +74,7 @@ const yonkoma = `紬	ジュリア	あずさ
 美奈子	ひなた	育	このみ	真美			
 風花	エミリー	このみ					
 紗代子	紬	百合子					
+まつり	美也	朋花					
 環	瑞希						
 真美	雪歩	ひなた	育				
 桃子	星梨花	育					
@@ -77,6 +85,7 @@ const yonkoma = `紬	ジュリア	あずさ
 歩	亜美	律子					
 亜利沙	翼	ジュリア					
 真	星梨花						
+ひなた	まつり	亜利沙					
 紬	のり子						
 瑞希	貴音	桃子					
 可憐	瑞希						
@@ -105,7 +114,9 @@ const yonkoma = `紬	ジュリア	あずさ
 静香	翼	志保	亜利沙				
 千早	このみ						
 琴葉	亜美	真美					
+亜美	律子	まつり	朋花				
 海美	美奈子	紬					
+まつり	亜利沙						
 朋花	千鶴	美希					
 美也	桃子						
 エミリー	ロコ	可奈	貴音				
@@ -137,12 +148,14 @@ const yonkoma = `紬	ジュリア	あずさ
 紬	ジュリア						
 エレナ	瑞希	莉緒					
 恵美	海美	環					
+琴葉	歩	昴	星梨花	まつり			
 翼	静香	未来					
 千早	茜						
 貴音	亜美	真美					
 莉緒	風花	歌織					
 育	歌織	このみ					
 紗代子	恵美	ジュリア					
+エミリー	伊織	紬	貴音	まつり	雪歩	亜美	真美
 千鶴	静香						
 環	伊織	千鶴	貴音	ひなた			
 瑞希	翼	このみ	莉緒				
@@ -152,6 +165,7 @@ const yonkoma = `紬	ジュリア	あずさ
 茜							
 真美	のり子						
 杏奈	百合子						
+まつり	歩	朋花	貴音	星梨花			
 ジュリア	翼						
 風花	ひなた	海美					
 琴葉	恵美	エレナ					
@@ -180,6 +194,7 @@ const yonkoma = `紬	ジュリア	あずさ
 あずさ	麗花	美也					
 美奈子	可奈						
 ロコ	杏奈						
+まつり	美咲						
 美也	杏奈	静香					
 エレナ	美也	莉緒					
 麗花	茜	志保					
@@ -226,6 +241,7 @@ const yonkoma = `紬	ジュリア	あずさ
 奈緒	千鶴	歩					
 杏奈							
 美奈子	真美						
+桃子	まつり						
 このみ	小鳥	美咲					
 千鶴	エレナ	星梨花					
 志保							
@@ -245,9 +261,12 @@ const yonkoma = `紬	ジュリア	あずさ
 百合子	瑞希						
 環	亜利沙	小鳥					
 ジュリア	茜						
+未来	まつり						
+真	まつり						
 恵美							
 美也	エレナ	茜					
 朋花	恵美						
+まつり	美也	朋花					
 美希	朋花	百合子					
 紬	美奈子						
 未来	ひなた	星梨花					
@@ -278,6 +297,7 @@ const yonkoma = `紬	ジュリア	あずさ
 真	ジュリア	昴					
 可憐	恵美	杏奈	雪歩				
 雪歩	響	貴音					
+まつり	ひなた						
 莉緒	杏奈	百合子					
 風花	莉緒						
 奈緒	歩						
@@ -287,6 +307,7 @@ const yonkoma = `紬	ジュリア	あずさ
 ひなた							
 紬	エミリー						
 海美	春香						
+昴	まつり						
 このみ	莉緒	亜美	ロコ				
 響	翼	律子	美希				
 春香	亜美	亜利沙	奈緒				
@@ -296,6 +317,7 @@ const yonkoma = `紬	ジュリア	あずさ
 千早	環						
 可憐	律子	風花	あずさ				
 育	莉緒						
+エミリー	まつり						
 亜美	律子	風花					
 伊織	エミリー						
 響	恵美						
@@ -314,6 +336,7 @@ const yonkoma = `紬	ジュリア	あずさ
 美也	ひなた	可憐	星梨花				
 莉緒	このみ	風花	貴音				
 志保	麗花	静香	歌織	可奈			
+まつり							
 奈緒	歩	志保					
 ひなた	亜利沙						
 恵美							
@@ -337,6 +360,8 @@ const yonkoma = `紬	ジュリア	あずさ
 美奈子	可奈	美咲					
 風花	百合子						
 真	雪歩						
+歩	まつり						
+美也	朋花	まつり					
 海美							
 環	恵美	響					
 朋花	春香	恵美					
@@ -376,7 +401,30 @@ const yonkoma = `紬	ジュリア	あずさ
 亜利沙	海美	奈緒	律子				
 瑞希	未来						
 歌織	昴	このみ					
-貴音	玲音	詩花	黒井社長				`;
+貴音	玲音	詩花	黒井社長				
+ジュリア	麗花						
+麗花	美也						
+百合子	琴葉	紗代子					
+静香	美奈子						
+琴葉	美奈子	のり子					
+春香	千早						
+環	育	桃子					
+ジュリア	真	紬					
+翼	莉緒	まつり					
+海美	杏奈	ロコ					
+このみ							
+玲音	美咲	小鳥					
+詩花	黒井社長	亜利沙	響				
+雪歩	真	伊織					
+恵美	エレナ	琴葉					
+玲音	育	響	亜利沙				
+志保	亜美	真美					
+エレナ							
+詩花	莉緒	このみ	黒井社長	玲音			
+歩	杏奈						
+茜	志保	麗花					
+可憐	翼						
+真	歌織	このみ					`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
