好意グラフを更新

--- a/triangle.html
+++ b/triangle.html
@@ -17,12 +17,13 @@
 </head>
 <body>
 	<h1>4コマに見る三角関係</h1>
-	<div id="network"></div>
+
 	<ul>
 		<li>ミリシタ4コマに登場するアイドルを集計し、好意の向きを可視化しました。</li>
-		<li>4コマには主役が設定されています。主役以外で登場するアイドル(脇役アイドル)は、主役アイドルのことが好きで一緒に行動していたので4コマに登場したと考えられます。</li>
-		<li>例えば、春香が桃子の主役回に3回、千早、可奈、可憐の主役回に2回登場していた場合、登場回数が最も多い桃子のことが好きだと判定し、太さが3の矢印を春香⇒桃子に引きました。登場回数が1回以下の場合は矢印を引きません。</li>
+		<li>4コマには主役が設定されています。主役以外で登場するアイドル(脇役アイドル)は、主役アイドルのことが好きで一緒に行動していたので4コマに登場したと考え、好意の向きと大きさを矢印で表現しました。</li>
+		<li>例えば、春香が桃子の主役回に3回、千早の主役回に2回登場していた場合、登場回数が最も多い桃子のことが好きだと判定し、太さが3の矢印を春香⇒桃子に引きました。2位以下の千早には矢印を引きません。登場回数が1回以下の場合は、1位でも矢印を引きません。</li>
 	</ul>
+	<div id="network"></div>
 <script>
 const yonkoma = `紬	ジュリア	あずさ					
 歌織	星梨花	莉緒					
@@ -424,7 +425,21 @@ const yonkoma = `紬	ジュリア	あずさ
 歩	杏奈						
 茜	志保	麗花					
 可憐	翼						
-真	歌織	このみ					`;
+真	歌織	このみ					
+響							
+昴							
+美也	エレナ	亜利沙	桃子				
+律子	美希						
+あずさ							
+美奈子	育						
+未来	志保						
+朋花							
+茜	紬						
+可奈	未来						
+風花	茜	奈緒					
+ロコ	昴	美咲					
+育	小鳥						
+瑞希	歩	杏奈					`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
