制服などのシリーズでフィルター

--- a/4koma.html
+++ b/4koma.html
@@ -175,6 +175,11 @@ ul.dropdown_nav li {
 						
 					</select>
 				</div>
+				<div class="dropdown_container" title="シリーズ">
+					<select id="series" class="form-select">
+						
+					</select>
+				</div>
 			</ul>
         </div>
 
