三角関係グラフのデータ更新

--- a/4koma.html
+++ b/4koma.html
@@ -18,7 +18,8 @@
         }
         .story {
             
-            margin: 5px;
+            //margin: 5px;
+			padding: 5px;
             width: 300px;
             max-width: 100%;
             
