--- a/triangle.html
+++ b/triangle.html
@@ -115,10 +115,10 @@ const yonkoma = `紬	ジュリア	あずさ
 静香	翼	志保	亜利沙				
 千早	このみ						
 琴葉	亜美	真美					
-亜美	律子	まつり	朋花				
 海美	美奈子	紬					
-まつり	亜利沙						
+亜美	律子	まつり	朋花				
 朋花	千鶴	美希					
+まつり	亜利沙						
 美也	桃子						
 エミリー	ロコ	可奈	貴音				
 志保	杏奈	環					
@@ -128,11 +128,11 @@ const yonkoma = `紬	ジュリア	あずさ
 	百合子	貴音					
 歌織	風花	育					
 真	ひなた	環					
-真美	美咲						
 桃子	のり子	春香	亜利沙	奈緒			
+真美	美咲						
+のり子	昴						
 杏奈	百合子	亜利沙	奈緒				
 伊織	麗花	昴	百合子	美希			
-のり子	昴						
 ロコ	やよい	杏奈	歌織				
 雪歩	エミリー						
 可奈	千早	春香					
@@ -147,9 +147,9 @@ const yonkoma = `紬	ジュリア	あずさ
 あずさ	伊織	亜美					
 亜利沙	桃子						
 紬	ジュリア						
-エレナ	瑞希	莉緒					
-恵美	海美	環					
 琴葉	歩	昴	星梨花	まつり			
+恵美	海美	環					
+エレナ	瑞希	莉緒					
 翼	静香	未来					
 千早	茜						
 貴音	亜美	真美					
@@ -256,8 +256,8 @@ const yonkoma = `紬	ジュリア	あずさ
 紗代子	あずさ	海美	貴音	環			
 ジュリア	奈緒	貴音					
 歌織	律子	美咲					
-エレナ	瑞希	育					
 貴音	ロコ	響					
+エレナ	瑞希	育					
 歩	桃子	昴	ロコ				
 百合子	瑞希						
 環	亜利沙	小鳥					
@@ -265,8 +265,8 @@ const yonkoma = `紬	ジュリア	あずさ
 未来	まつり						
 真	まつり						
 恵美							
-美也	エレナ	茜					
 朋花	恵美						
+美也	エレナ	茜					
 まつり	美也	朋花					
 美希	朋花	百合子					
 紬	美奈子						
@@ -439,7 +439,33 @@ const yonkoma = `紬	ジュリア	あずさ
 風花	茜	奈緒					
 ロコ	昴	美咲					
 育	小鳥						
-瑞希	歩	杏奈					`;
+瑞希	歩	杏奈					
+歩							
+春香	玲音	詩花					
+紗代子	海美						
+昴	百合子	杏奈					
+美希	春香						
+のり子	奈緒						
+エミリー	紬	百合子					
+真	小鳥	美咲	ひなた				
+ひなた	真						
+まつり	瑞希	志保					
+莉緒	真美						
+奈緒	亜利沙						
+紬	ひなた	奈緒					
+やよい	莉緒	昴					
+律子	可憐	真美	亜美				
+未来	静香						
+琴葉	エレナ	恵美					
+亜美	春香	真美	茜				
+ロコ	紬						
+翼	環						
+伊織	環	律子	美咲				
+環	紗代子						
+亜利沙							
+麗花	育						
+奈緒	育						
+ジュリア	昴						`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
