4コマ画像を直接表示するようにした

--- a/triangle.html
+++ b/triangle.html
@@ -465,7 +465,37 @@ const yonkoma = `紬	ジュリア	あずさ
 亜利沙							
 麗花	育						
 奈緒	育						
-ジュリア	昴						`;
+ジュリア	昴						
+のり子	美咲						
+静香	千早						
+雪歩	真	海美					
+杏奈	未来	可奈	翼	やよい			
+律子	亜美	あずさ	伊織				
+歌織	このみ	風花	莉緒				
+亜美							
+百合子							
+桃子	莉緒						
+真美	亜美						
+恵美	紬						
+貴音	響						
+亜利沙	茜						
+茜	ジュリア						
+美也	琴葉						
+海美	環	恵美					
+響							
+志保							
+千鶴	環						
+翼							
+琴葉	まつり						
+莉緒	美咲						
+風花	このみ	莉緒					
+可奈	貴音	ジュリア					
+伊織	美希						
+千早	紗代子						
+紗代子							
+瑞希	貴音	杏奈	雪歩				
+やよい	志保						
+志保	伊織						`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
