各話タイトルの改行をなくして、画像をそろえるようにした

--- a/4koma.html
+++ b/4koma.html
@@ -32,6 +32,11 @@
         #idols1, #idols2 , #drawers, option{
             max-width: 80px;
         }
+		.story_title {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
 
 #loading {
 	display: inline-block;
