--- a/4koma.html
+++ b/4koma.html
@@ -22,6 +22,7 @@
 			padding: 5px;
             width: 300px;
             max-width: 100%;
+			//border: 1px solid #aaa;
             
         }
         #navigation {
