注記に書籍購入を促す文言を追加

--- a/4koma.html
+++ b/4koma.html
@@ -200,7 +200,7 @@ ul.dropdown_nav li {
             <li>アイドルマスター ミリオンライブ！ シアターデイズ(ミリシタ)はバンダイナムコエンターテインメント社が所有するコンテンツです。</li>
 
             <li>データは<a href="https://docs.google.com/spreadsheets/d/14KC8lHOe0S-ue4UAJ7uWfjGmhmcPYsxALOX3myee_rU/edit#gid=1576622346">Googleスプレッドシート</a>で管理しています。データに記載ミスがありましたら修正ください。</li>
-            <li>記載しているデータは、<a href="https://twitter.com/search?q=from%3Aimasml_theater%20%23%E3%83%9F%E3%83%AA%E3%82%B7%E3%82%BF4%E3%82%B3%E3%83%9E&src=saved_search_click&f=live">公式ツイート</a>、ミリシタアプリ内の4コマ、THE IDOLM@STER MILLION LIVE! THEATER DAYS 4コマ シアターの日常(一迅社ブックス)を参照しています。</li>
+            <li>記載しているデータは、<a href="https://twitter.com/search?q=from%3Aimasml_theater%20%23%E3%83%9F%E3%83%AA%E3%82%B7%E3%82%BF4%E3%82%B3%E3%83%9E&src=saved_search_click&f=live">公式ツイート</a>、ミリシタアプリ内の4コマ、THE IDOLM@STER MILLION LIVE! THEATER DAYS 4コマ シアターの日常(一迅社ブックス)(<a href="https://www.amazon.co.jp/dp/B07TKSJJLX/">1巻</a>,<a href="https://www.amazon.co.jp/dp/B08DX9N323/">2巻</a>,<a href="https://www.amazon.co.jp/dp/B09NZSLD7W/">3巻</a>(←アフィリエイトじゃないAmazonリンクです。書籍もぜひどうぞ。))を参照しています。書籍未掲載分の作画者は推定です。</li>
             <li>バグ報告や機能改善案などは<a href="https://github.com/tankarup/">Github</a>へ</li>
         </ul>
     </div>
