reset parameters on click title text

--- a/4koma.html
+++ b/4koma.html
@@ -140,7 +140,7 @@ ul.dropdown_nav li {
 
 	
     <nav class="navbar navbar-primary bg-primary text-light p-0" id="main_navbar">
-        <h1 class="h3">ミリシタ4コマ ビューア<div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
+        <h1 class="h3"><span onclick="reset_parameters();" style="cursor:pointer;">ミリシタ4コマ ビューア</span><div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
         <div id="navigation">
             <button type="button" id="first_button" class="btn btn-primary">&lt;&lt;</button>
             <button type="button" id="prev_button" class="btn btn-primary">&lt;</button>
