パラメータリセットで主役指定がリセットされなかったバグを修正、三角関係をアップデート

--- a/triangle.html
+++ b/triangle.html
@@ -172,7 +172,7 @@ const yonkoma = `紬	ジュリア	あずさ
 琴葉	恵美	エレナ					
 ひなた	星梨花						
 亜利沙	奈緒	小鳥					
-やよい	律子						
+やよい	律子	百合子					
 美希	紗代子	律子	美也				
 響	環	海美	律子				
 昴	百合子	静香					
@@ -495,7 +495,46 @@ const yonkoma = `紬	ジュリア	あずさ
 紗代子							
 瑞希	貴音	杏奈	雪歩				
 やよい	志保						
-志保	伊織						`;
+志保	伊織						
+莉緒	ジュリア						
+美奈子	奈緒	恵美					
+エレナ	風花						
+貴音	可奈	百合子					
+エミリー	雪歩						
+恵美							
+星梨花	未来	静香					
+のり子	琴葉	亜美					
+育	美奈子						
+杏奈	亜利沙						
+可憐	律子						
+このみ	星梨花	やよい					
+ロコ	翼						
+桃子	のり子	奈緒					
+亜利沙	恵美	可憐	奈緒				
+朋花							
+あずさ	ひなた	雪歩					
+千鶴	昴	のり子					
+雪歩	貴音						
+紬							
+歌織							
+歩	まつり	律子	桃子				
+ジュリア	百合子	響	杏奈				
+琴葉	杏奈	ジュリア					
+風花	琴葉	莉緒	このみ				
+星梨花	静香	小鳥					
+歩							
+春香	瑞希						
+歌織	風花	美咲					
+紗代子	奈緒						
+千早	美也	静香					
+まつり	瑞希	エレナ					
+麗花	茜						
+真							
+紬							
+ひなた	歌織						
+未来	静香	響	春香				
+律子	真美	亜美					
+美希	春香						`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
