三角関係更新

--- a/triangle.html
+++ b/triangle.html
@@ -534,7 +534,37 @@ const yonkoma = `紬	ジュリア	あずさ
 ひなた	歌織						
 未来	静香	響	春香				
 律子	真美	亜美					
-美希	春香						`;
+美希	春香						
+奈緒							
+茜	律子	奈緒					
+紗代子							
+千鶴	小鳥	美咲	ロコ				
+環	莉緒	歌織					
+琴葉	昴						
+亜美	真	美希					
+真美	小鳥						
+恵美	美咲	エレナ	琴葉	このみ	あずさ		
+美奈子							
+美希	ジュリア						
+雪歩	真	春香	可憐	百合子	桃子		
+あずさ	莉緒	律子					
+千早	亜美	真美	琴葉	律子			
+可憐	春香	亜利沙					
+瑞希	このみ						
+美也							
+春香	千早	亜美	真美				
+やよい	育						
+昴	のり子	百合子	翼				
+奈緒							
+このみ							
+麗花	律子	歩					
+真美	亜美						
+静香	茜	ジュリア					
+育	桃子	環					
+朋花	エミリー	紬	まつり				
+海美	エレナ						
+亜美	真美						
+真	響						`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
