--- a/4koma.html
+++ b/4koma.html
@@ -187,6 +187,12 @@ ul.dropdown_nav li {
 						
 					</select>
 				</div>
+				<!--画像の一部を表示するオプションを付けようとしたけど、いまいちなのでとりあえず消しておく-->
+				<div style="display: none;">
+					<div  class="dropdown_container" style="font-size:medium;" title="画像全体を表示">
+						<div class="form-check"><input class="form-check-input" type="checkbox" id="show_whole_picture" checked>🖼️</div>
+					</div>
+				</div>
 			</ul>
         </div>
 
