メニューの幅を指定

--- a/4koma.html
+++ b/4koma.html
@@ -182,7 +182,7 @@ ul.dropdown_nav li {
 						
 					</select>
 				</div>
-				<div class="dropdown_container" title="シリーズ">
+				<div class="dropdown_container" title="シリーズ" style="width: 100px;">
 					<select id="series" class="form-select">
 						
 					</select>
