--- a/4koma.html
+++ b/4koma.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ミリシタ4コマ　検索  ビューア</title>
+    <title>ミリシタ4コマ検索</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/gh/geedmo/yamm@4.0.0/dist/yamm.min.css" rel="stylesheet">
@@ -140,7 +140,7 @@ ul.dropdown_nav li {
 
 	
     <nav class="navbar navbar-primary bg-primary text-light p-0" id="main_navbar">
-        <h1 class="h3"><span onclick="reset_parameters();" style="cursor:pointer;">ミリシタ4コマ ビューア</span><div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
+        <h1 class="h3"><span onclick="reset_parameters();" style="cursor:pointer;">ミリシタ4コマ検索</span><div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
         <div id="navigation">
             <button type="button" id="first_button" class="btn btn-primary">&lt;&lt;</button>
             <button type="button" id="prev_button" class="btn btn-primary">&lt;</button>
@@ -188,11 +188,13 @@ ul.dropdown_nav li {
 					</select>
 				</div>
 				<!--画像の一部を表示するオプションを付けようとしたけど、いまいちなのでとりあえず消しておく-->
+				<!--
 				<div style="display: none;">
 					<div  class="dropdown_container" style="font-size:medium;" title="画像全体を表示">
 						<div class="form-check"><input class="form-check-input" type="checkbox" id="show_whole_picture" checked>🖼️</div>
 					</div>
 				</div>
+				-->
 			</ul>
         </div>
 
@@ -202,12 +204,14 @@ ul.dropdown_nav li {
         <!-- // -->
     </div>
     <div id="informations" class="small">
+		
         <ul>
+			<li>本サイトは<a href="https://twitter.com/tankaru">たんかる</a>が管理しています。</li>
             <li>アイドルマスター ミリオンライブ！ シアターデイズ(ミリシタ)はバンダイナムコエンターテインメント社が所有するコンテンツです。</li>
 
             <li>データは<a href="https://docs.google.com/spreadsheets/d/14KC8lHOe0S-ue4UAJ7uWfjGmhmcPYsxALOX3myee_rU/edit#gid=1576622346">Googleスプレッドシート</a>で管理しています。データに記載ミスがありましたら修正ください。</li>
             <li>記載しているデータは、<a href="https://twitter.com/search?q=from%3Aimasml_theater%20%23%E3%83%9F%E3%83%AA%E3%82%B7%E3%82%BF4%E3%82%B3%E3%83%9E&src=saved_search_click&f=live">公式ツイート</a>、ミリシタアプリ内の4コマ、THE IDOLM@STER MILLION LIVE! THEATER DAYS 4コマ シアターの日常(一迅社ブックス)(<a href="https://www.amazon.co.jp/dp/B07TKSJJLX/">1巻</a>,<a href="https://www.amazon.co.jp/dp/B08DX9N323/">2巻</a>,<a href="https://www.amazon.co.jp/dp/B09NZSLD7W/">3巻</a>(←アフィリエイトじゃないAmazonリンクです。書籍もぜひどうぞ。))を参照しています。書籍未掲載分の作画者は推定です。</li>
-            <li>バグ報告や機能改善案などは<a href="https://github.com/tankarup/">Github</a>へ</li>
+            <li>バグ報告や機能改善案などは<a href="https://github.com/tankarup/">Github</a>か<a href="https://twitter.com/tankaru">Twitter</a>へ</li>
         </ul>
     </div>
 
