左右矢印キーでページを移動する機能を追加

--- a/4koma.html
+++ b/4koma.html
@@ -228,7 +228,7 @@ img.referred {
     <div id="informations" class="small">
 		
         <ul>
-			<li>本サイトは<a href="https://twitter.com/tankaru">たんかる</a>が管理しています。</li>
+			<li>本サイトは<a href="https://twitter.com/tankaru">たんかる</a>が管理する非公式サイトです。</li>
             <li>アイドルマスター ミリオンライブ！ シアターデイズ(ミリシタ)はバンダイナムコエンターテインメント社が所有するコンテンツです。</li>
 
             <li>データは<a href="https://docs.google.com/spreadsheets/d/14KC8lHOe0S-ue4UAJ7uWfjGmhmcPYsxALOX3myee_rU/edit#gid=1576622346">Googleスプレッドシート</a>で管理しています。データに記載ミスがありましたら修正ください。</li>
