左右矢印ページ移動の挙動を改善

--- a/4koma.html
+++ b/4koma.html
@@ -142,7 +142,7 @@ iframe, .twitter-tweet  {
 }
 */
 img.referred {
-	filter: opacity(0.5);
+	filter: opacity(0.4);
 }
     </style>
 </head>
@@ -154,9 +154,9 @@ img.referred {
         <h1 class="h3"><span onclick="reset_parameters();" style="cursor:pointer;">ミリシタ4コマ検索</span><div id="loading"><div class="dot dot1"></div><div class="dot dot2"></div><div class="dot dot3"></div><span id="loading_text">Loading...</span></div></h1>
         <div class="navigation">
             <button type="button" id="" class="first_button btn btn-primary">&lt;&lt;</button>
-            <button type="button" id="" class="prev_button btn btn-primary">&lt;</button>
+            <button type="button" id="" class="prev_button btn btn-primary" title="←">&lt;</button>
             <span class="pages">**/**</span>
-            <button type="button" id="" class="next_button btn btn-primary">&gt;</button>
+            <button type="button" id="" class="next_button btn btn-primary" title="→">&gt;</button>
             <button type="button" id="" class="last_button btn btn-primary">&gt;&gt;</button>
         </div>
         <div >
